# TeaLang-Interpeter-CPP20

./: .gitignore  CMakeLists.txt  Notes  README.md  Readme.md  Run.sh  Run6.sh  Test1.tlng  Test2.tlng  Test3.tlng  Test4.tlng  Test5.tlng  Test6.tlng  TestCases.h  compile.sh  main.cpp  source.md
Lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
Parser/: AST.cpp  AST.h  Parser.cpp  Parser.h
Visitor/: Interpreter_Visitor.cpp  Interpreter_Visitor.h  Semantic_Visitor.cpp  Semantic_Visitor.h  Visitor.h  XML_Visitor.cpp  XML_Visitor.h
